[package]
name = "tiger"
version = "0.2.1"
description = "Tiger hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/tiger"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "hash", "tiger", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
data-encoding = "2.4.0"
digest = "0.10.7"

[dev-dependencies]
data-encoding-macro = "0.1.13"
digest = { version = "0.10.7", features = ["dev"] }
hex-literal = "0.2.2"

[features]
default = ["std"]
std = ["digest/std"]
